--- a/src/app/writing-pad/note-area/note-area.component.html
+++ b/src/app/writing-pad/note-area/note-area.component.html
@@ -3,8 +3,8 @@
     <h1>Write Your Note Here</h1>
   </div>
   <div class="make_new_note">
-    <input class="form-control" placeholder="Title" type="text" />
-    <button (click)="openTruckModal(truckModal)">Add</button>
+    <input class="form-control" [(ngModel)]="inputValue" placeholder="Title" type="text" />
+    <button (click)="onAdd()">Add</button>
   </div>
 
   <ng-template #truckModal let-modal>
