--- a/src/app/left-sidebar/notes/notes.component.html
+++ b/src/app/left-sidebar/notes/notes.component.html
@@ -1,3 +1,6 @@
 <div class="left_sidebar_main">
-  <p>left-sidebar</p>
+  <div class="note_lists">
+    {{ value }}
+    {{ note }}
+  </div>
 </div>
