--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,16 @@
-.container {
+.main_container {
   display: flex;
+  width: 100% !important;
 }
 
 .notes {
+  /* padding-top: 30px; */
   width: 20%;
   min-height: 80vh;
-  border: 1px solid red;
+  border-right: 1px solid black;
 }
 
 .writing_pad {
+  /* padding-top: 30px; */
   width: 80%;
 }
