tried fixing left-sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,8 @@
 <div class="main_container">
   <app-notes
     class="notes"
-    [value]= "this.noteList.text"
     [note]= "this.noteList.textNote"
-
+    [sideBarTitleValue]= "this.noteList.text"
   ></app-notes>
   <div class="writing_pad">
     <div class="add_newtitle">
