--- a/src/app/left-sidebar/notes/notes.component.html
+++ b/src/app/left-sidebar/notes/notes.component.html
@@ -1,6 +1,6 @@
 <div class="left_sidebar_main">
   <div class="note_lists">
-    {{ value }}
+    {{ sideBarTitleValue }}
     {{ note }}
   </div>
 </div>
