--- a/src/app/writing-pad/text-area/text-area.component.html
+++ b/src/app/writing-pad/text-area/text-area.component.html
@@ -1,7 +1,7 @@
 <div class="text_area_main">
   <div class="text_area">
     <h4>
-      {{ title }} : <span>{{ value }}</span>
+      Title : <span>{{ value }}</span>
     </h4>
 
     <textarea
