--- a/src/app/left-sidebar/notes/notes.component.html
+++ b/src/app/left-sidebar/notes/notes.component.html
@@ -1,6 +1,12 @@
 <div class="left_sidebar_main">
   <div class="note_lists">
-    {{ sideBarTitleValue }}
+    {{ value }}
     {{ note }}
+    <!-- <ul *ngFor="let note of notes">
+      <li>
+        {{note.title}}
+        {{note.descrip}}
+      </li>
+    </ul> -->
   </div>
 </div>
